welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:35: error: Unmatched closing brace '}' ignored here
}
^